
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/photoinfo"
    android:layout_width="200dp" android:layout_height="200dp"
    android:layout_gravity="center"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_pi" android:text="@string/photoinfotitle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="5dp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content_pi"
        android:text="@string/photoinfocontent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_pi"
        android:layout_marginTop="30dp"
        android:padding="5dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@id/content_pi"
        android:layout_marginTop="30dp"
        android:onClick="ClickOk"/>

</RelativeLayout>